--- a/style.css
+++ b/style.css
@@ -72,13 +72,15 @@ body {
 
 .main-buttons {
   display: flex;
-  justify-content: basecenterine;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
 
 .main-buttons button {
-  width: 50px;
-  height: 50px;
-  margin: 5px;
+  width: 103px;
+  height: 82px;
+  margin: 6px;
+  font-size: large;
+  font-weight: 600;
 }
