Add full calc functionality

--- a/style.css
+++ b/style.css
@@ -42,14 +42,20 @@ body {
 }
 .display p {
   border: 1px solid black;
-  display: flex;
 }
 
-.display .top-display {
+.display #top-display {
   flex: 1;
+  text-align: right;
 }
-.display .bot-display {
+.display #bot-display {
   flex: 2;
+  text-align: center;
+  text-align: right;
+
+  width: 100%;
+  font-size: 32px;
+  padding-top: 5px;
 }
 
 .main-buttons {
